[package]
name = "hyperlane-log"
version = "1.9.0"
edition = "2024"
authors = ["ltpp-universe <root@ltpp.vip>"] 
license = "MIT"
description = """This Rust logging library supports both asynchronous and synchronous logging. It provides multiple log levels such as error, info, and debug. Users can define custom log handling methods and configure log file paths. The library supports log rotation, automatically creating a new log file when the current file reaches the specified size limit. It allows flexible logging configurations, making it suitable for both high-performance asynchronous applications and traditional synchronous logging scenarios. The asynchronous mode uses Tokio's async channels for efficient log buffering, while the synchronous mode writes logs directly to the file system."""
keywords = ["http", "request", "response", "tcp", "redirect"]
repository = "https://github.com/ltpp-universe/hyperlane-log.git"
categories = ["network-programming", "web-programming","development-tools"]
exclude = [
    "target",
    "Cargo.lock",
    "sh",
    ".github",
    "logs",
    "**/*.log"
]

[dependencies]
file-operation = "0.5.1"
hyperlane-time = "0.2.1"
lombok-macros = "1.9.1"
recoverable-spawn = "3.5.1"

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
